<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/inner_margin"
    >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/inner_margin"
        android:text="@string/enter_admin_password"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_large"
        android:inputType="textPassword"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/inner_margin_medium"
            android:background="@android:color/transparent"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/colorAccent"
            android:text="@string/cancel_button"
            android:layout_toLeftOf="@+id/buttonContinue"
            />

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/colorAccent"
            android:text="@string/continue_button"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

</LinearLayout>