<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstallActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:background="@drawable/logo_background"
            android:src="@drawable/ic_biobot"
            android:layout_marginTop="@dimen/outer_margin"
            android:layout_marginLeft="@dimen/outer_margin"
            />

        <TextView
            android:id="@+id/textViewUserID"
            android:layout_marginLeft="@dimen/inner_margin"
            android:layout_marginRight="@dimen/inner_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:textStyle="italic"
            android:layout_above="@id/textViewCityManhole"
            android:layout_toLeftOf="@id/buttonLogout"
            android:layout_toRightOf="@id/imageViewLogo"
            />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/outer_margin"
            android:layout_marginRight="@dimen/outer_margin"
            android:padding="@dimen/padding"
            android:text="@string/log_out"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/colorAccent"
            android:onClick="onClickLogout"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            />

        <TextView
            android:id="@+id/textViewCityManhole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/outer_margin"
            android:layout_marginRight="@dimen/outer_margin"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:textStyle="italic"
            android:layout_below="@+id/buttonLogout"
            />

        <TextView
            android:id="@+id/textViewBoxID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/outer_margin"
            android:layout_marginTop="@dimen/inner_margin"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:text="@string/box_id"
            android:textStyle="bold"
            android:layout_below="@+id/textViewCityManhole"
            />

        <Spinner
            android:id="@+id/spinnerBoxID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/outer_margin"
            android:layout_marginLeft="@dimen/outer_margin"
            android:layout_marginBottom="@dimen/inner_margin_medium"
            android:background="@color/white"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:layout_below="@+id/textViewBoxID"
            />

        <TextView
            android:id="@+id/textViewTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/outer_margin"
            android:layout_marginTop="@dimen/inner_margin"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:text="@string/todo"
            android:textStyle="bold"
            android:layout_below="@+id/spinnerBoxID"

            />

        <CheckBox
            android:id="@+id/checkBoxNewBatteryInstalled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:button="@drawable/checkbox_selector"
            android:layout_marginLeft="@dimen/indented_margin"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/inner_margin_medium"
            android:layout_below="@+id/textViewTodo"
            />

        <TextView
            android:id="@+id/textViewNewBatteryInstalled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/inner_margin"
            android:text="@string/new_battery_installed"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:layout_below="@id/textViewTodo"
            android:layout_toRightOf="@+id/checkBoxNewBatteryInstalled"
            />

        <CheckBox
            android:id="@+id/checkBoxNewPanelInstalled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:button="@drawable/checkbox_selector"
            android:layout_marginLeft="@dimen/indented_margin"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/inner_margin_medium"
            android:layout_below="@+id/checkBoxNewBatteryInstalled"
            />

        <TextView
            android:id="@+id/textViewNewPanelInstalled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/inner_margin"
            android:text="@string/new_panel_installed"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:layout_below="@id/checkBoxNewBatteryInstalled"
            android:layout_toRightOf="@+id/checkBoxNewPanelInstalled"
            />

        <CheckBox
            android:id="@+id/checkBoxInletAssemblyPluggedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:button="@drawable/checkbox_selector"
            android:layout_marginLeft="@dimen/indented_margin"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/inner_margin_medium"
            android:layout_below="@+id/checkBoxNewPanelInstalled"
            />

        <TextView
            android:id="@+id/textViewInletAssemblyPluggedIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/inner_margin"
            android:text="@string/inlet_assembly_plugged_in"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:layout_below="@id/checkBoxNewPanelInstalled"
            android:layout_toRightOf="@+id/checkBoxInletAssemblyPluggedIn"
            />

        <TextView
            android:id="@+id/textViewResetTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/outer_margin"
            android:layout_marginTop="@dimen/inner_margin"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:text="@string/reset_time"
            android:textStyle="bold"
            android:layout_below="@id/checkBoxInletAssemblyPluggedIn"
            />

        <EditText
            android:id="@+id/editTextResetTime"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/inner_margin_medium"
            android:layout_marginLeft="@dimen/outer_margin"
            android:layout_marginRight="@dimen/outer_margin"
            android:padding="@dimen/padding"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:focusable="false"
            android:layout_below="@id/textViewResetTime"
            />

        <TextView
            android:id="@+id/textViewLightTurnedGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/outer_margin"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:text="@string/light_turned_green"
            android:textStyle="bold"
            android:layout_below="@id/editTextResetTime"
            />

        <EditText
            android:id="@+id/editTextLightTurnedGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/outer_margin"
            android:layout_marginRight="@dimen/outer_margin"
            android:layout_marginBottom="@dimen/inner_margin"
            android:padding="@dimen/padding"
            android:background="@color/white"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:focusable="false"
            android:layout_below="@id/textViewLightTurnedGreen"
            />

        <TextView
            android:id="@+id/textViewLightStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/outer_margin"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:text="@string/light_status"
            android:textStyle="bold"
            android:layout_below="@+id/editTextLightTurnedGreen"
            />

        <Spinner
            android:id="@+id/lightStatusSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/outer_margin"
            android:layout_marginLeft="@dimen/outer_margin"
            android:layout_marginBottom="@dimen/inner_margin_medium"
            android:background="@color/white"
            android:layout_below="@id/textViewLightStatus"
            android:entries="@array/blinking_solid"
            />

        <TextView
            android:id="@+id/textViewNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/outer_margin"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:text="@string/notes"
            android:textStyle="bold"
            android:layout_below="@+id/lightStatusSpinner"
            />

        <EditText
            android:id="@+id/editTextNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/install_notes_hint"
            android:layout_marginLeft="@dimen/outer_margin"
            android:layout_marginRight="@dimen/outer_margin"
            android:padding="@dimen/padding"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:background="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@id/textViewNotes"
            />

        <Button
            android:id="@+id/buttonLogInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="25dp"
            android:padding="@dimen/padding"
            android:onClick="onClickLogInfo"
            android:text="@string/log_info"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_large"
            android:background="@drawable/button"
            android:layout_below="@id/editTextNotes"

            />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>