<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".AdminActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:background="@drawable/logo_background"
            android:src="@drawable/ic_biobot"
            android:layout_marginTop="@dimen/outer_margin"
            android:layout_marginLeft="@dimen/outer_margin"
            />

        <TextView
            android:id="@+id/textViewAdminPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/inner_margin"
            android:layout_marginRight="@dimen/inner_margin"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:textStyle="italic"
            android:text="@string/admin_panel"
            android:layout_above="@+id/feedbackTitleTextView"
            android:layout_toLeftOf="@id/buttonLogout"
            android:layout_toRightOf="@id/imageViewLogo"
            />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/outer_margin"
            android:layout_marginRight="@dimen/outer_margin"
            android:padding="@dimen/padding"
            android:text="@string/log_out"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/colorAccent"
            android:onClick="onClickLogout"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            />

        <TextView
            android:id="@+id/feedbackTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_title"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/outer_margin"
            android:layout_marginLeft="@dimen/outer_margin"
            android:layout_below="@+id/buttonLogout"
            />

        <ScrollView
            android:id="@+id/scrollViewFeedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/shadow"
            android:layout_marginBottom="@dimen/inner_margin"
            android:layout_marginLeft="@dimen/outer_margin"
            android:layout_marginRight="@dimen/outer_margin"
            android:padding="@dimen/padding"
            android:layout_below="@id/feedbackTitleTextView"
            android:layout_above="@+id/buttonReadData"
            >
            <TextView
                android:id="@+id/textViewFeedback"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/text_color"
                android:textSize="@dimen/font_size_small"
                />
        </ScrollView>

        <Button
            android:id="@+id/buttonReadData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/inner_margin"
            android:layout_marginBottom="@dimen/outer_margin"
            android:layout_marginRight="@dimen/inner_margin_medium"
            android:padding="@dimen/padding"
            android:onClick="onClickRead"
            android:background="@drawable/button"
            android:textSize="@dimen/font_size_large"
            android:text="@string/read"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/buttonEmail"
            />

        <Button
            android:id="@+id/buttonEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/inner_margin"
            android:layout_marginBottom="@dimen/outer_margin"
            android:layout_marginRight="@dimen/outer_margin"
            android:padding="@dimen/padding"
            android:onClick="onClickEmail"
            android:background="@drawable/button"
            android:textSize="@dimen/font_size_large"
            android:text="@string/email"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>